--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us | Delicious Bites Bakery</title>
+    <title>Contact Us | LeBroc Grocery</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo">Delicious<span>Bites</span></div>
+            <div class="logo">Le<span>Broc</span></div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -33,23 +33,26 @@
 
                 <!-- Left: Contact Details + Map -->
                 <div>
-                    <h3 style="color: #d35400; margin-bottom: 1rem;">Visit Our Bakery</h3>
+                    <h3 style="color: #d35400; margin-bottom: 1rem;">Visit Our Store</h3>
                     <p><strong>Address:</strong><br>
-                    Shop No. 12, MG Road,<br>
-                    Indiranagar, Bangalore - 560038</p><br>
+                    123 Main Street,<br>
+                    Anytown, USA 12345</p><br>
 
-                    <p><strong>Phone / WhatsApp:</strong><br>
-                    +91 98765 43210</p><br>
+                    <p><strong>Phone:</strong><br>
+                    (123) 456-7890</p><br>
 
                     <p><strong>Email:</strong><br>
-                    hello@deliciousbites.in</p><br>
+                    hello@lebroc.com</p><br>
 
                     <p><strong>Opening Hours:</strong><br>
-                    Mon–Sun: 8:00 AM – 10:00 PM</p><br>
+                    Mon–Sat: 8:00 AM – 9:00 PM<br>
+                    Sun: 10:00 AM - 7:00 PM
+                    </p><br>
 
                     <!-- Google Map (replace with your real location link if needed) -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.159120897944!2d77.64004361479995!3d12.960945990863148!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae13fd129b2bcd%3A0x4c42e42f0b3a755e!2sIndiranagar%2C%20Bengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1698000000000!5m2!1sen!2sin" 
-                    width="100%" height="350" style="border:0; border-radius:15px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div style="width:100%; height:350px; background-color:#f0f0f0; border-radius:15px; display:flex; align-items:center; justify-content:center;">
+                        <p style="color:#666;">Map placeholder</p>
+                    </div>
                 </div>
 
                 <!-- Right: Contact Form -->
@@ -61,7 +64,7 @@
                             <input type="text" required>
                         </div>
                         <div class="form-group">
-                            <label>Phone / WhatsApp *</label>
+                            <label>Phone *</label>
                             <input type="tel" required>
                         </div>
                         <div class="form-group">
@@ -69,15 +72,15 @@
                             <input type="email">
                         </div>
                         <div class="form-group">
-                            <label>Message / Order Details *</label>
-                            <textarea required placeholder="Example: I want a 2kg chocolate truffle cake for 15th Dec..."></textarea>
+                            <label>Message *</label>
+                            <textarea required placeholder="Your questions or comments..."></textarea>
                         </div>
                         <button type="submit" class="btn" style="width:100%; padding:14px;">Send Message</button>
                     </form>
 
                     <!-- Success message (hidden by default) -->
                     <p id="successMsg" style="color:green; margin-top:1rem; display:none; font-weight:600;">
-                        Thank you! We will contact you soon!
+                        Thank you! We will get back to you soon!
                     </p>
                 </div>
             </div>
@@ -86,7 +89,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 Delicious Bites Bakery | MG Road, Indiranagar, Bangalore | Phone: +91 98765 43210</p>
+        <p>© 2025 LeBroc Grocery | 123 Main Street, Anytown, USA | Call: (123) 456-7890</p>
     </footer>
 
     <!-- Mobile Menu Script + Form Submit Alert -->
