--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery | Delicious Bites Bakery</title>
+    <title>Gallery | LeBroc Grocery</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +12,7 @@
     <!-- Header (same on every page) -->
     <header>
         <nav class="container">
-            <div class="logo">Delicious<span>Bites</span></div>
+            <div class="logo">Le<span>Broc</span></div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -27,23 +27,22 @@
     <!-- Gallery Section -->
     <section style="padding:120px 0 80px;">
         <div class="container">
-            <h2>Our Bakery Gallery</h2>
+            <h2>Our Grocery Store</h2>
             <div class="gallery-grid">
-                <img src="images/cake1.jpg" alt="Chocolate Cake">
-                <img src="images/cake2.jpg" alt="Red Velvet Cake">
-                <img src="images/cake3.jpg" alt="Black Forest">
-                <img src="images/cake4.jpg" alt="Custom Birthday Cake">
-                <img src="images/shop.jpg" alt="Inside our bakery">
-                <img src="images/owner.jpg" alt="Owner with customers">
-                <!-- Add more photos -->
-                <img src="images/cake1.jpg" alt="Wedding Cake">
-                <img src="images/cake2.jpg" alt="Cupcakes">
+                <img src="images/gallery1.jpg" alt="Aisle with fresh produce">
+                <img src="images/gallery2.jpg" alt="Shelves stocked with goods">
+                <img src="images/gallery3.jpg" alt="Close-up of fresh bread">
+                <img src="images/gallery4.jpg" alt="A variety of cheeses">
+                <img src="images/gallery5.jpg" alt="The entrance to the store">
+                <img src="images/gallery6.jpg" alt="A friendly staff member">
+                <img src="images/gallery7.jpg" alt="A display of organic products">
+                <img src="images/gallery8.jpg" alt="Customers shopping in the store">
             </div>
         </div>
     </section>
 
     <footer>
-        <p>© 2025 Delicious Bites Bakery | MG Road, Indiranagar, Bangalore | Call: +91 98765 43210</p>
+        <p>© 2025 LeBroc Grocery | 123 Main Street, Anytown, USA | Call: (123) 456-7890</p>
     </footer>
 
     <script>
