--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delicious Bites Bakery | Fresh Cakes & Pastries</title>
+    <title>LeBroc Grocery | Fresh Groceries</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo">Delicious<span>Bites</span></div>
+            <div class="logo">Le<span>Broc</span></div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -27,25 +27,25 @@
     <!-- Hero -->
     <section class="hero">
         <div class="container">
-            <h1>Freshly Baked with Love</h1>
-            <p>Custom cakes, pastries & bread made daily in Indiranagar</p>
-            <a href="products.html" class="btn">View Our Menu</a>
+            <h1>Your Daily Dose of Freshness</h1>
+            <p>Quality groceries, fresh produce, and household essentials</p>
+            <a href="products.html" class="btn">Browse Our Products</a>
         </div>
     </section>
 
     <!-- Quick Info -->
     <section>
         <div class="container" style="text-align:center; padding:60px 0;">
-            <h2>Welcome to Delicious Bites Bakery</h2>
+            <h2>Welcome to LeBroc Grocery</h2>
             <p style="font-size:1.2rem; max-width:800px; margin:0 auto;">
-                Since 2020, we have been serving the best cakes, pastries, and custom celebration cakes in Bangalore. 
-                Everything is baked fresh every morning with pure butter and the finest ingredients.
+                Your friendly neighborhood grocery store. We offer a wide range of products, from fresh fruits and vegetables to pantry staples and household items. 
+                We are committed to providing you with the best quality products and service.
             </p>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 Delicious Bites Bakery | MG Road, Indiranagar, Bangalore | Call: +91 98765 43210</p>
+        <p>&copy; 2025 LeBroc Grocery | 123 Main Street, Anytown, USA | Call: (123) 456-7890</p>
     </footer>
 
     <script>
