--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delicious Bites Bakery | Fresh Cakes & Pastries</title>
+    <title>Products | LeBroc Grocery</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo">Delicious<span>Bites</span></div>
+            <div class="logo">Le<span>Broc</span></div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -30,33 +30,53 @@
         <h2>Our Products</h2>
         <div class="products-grid">
             <div class="product-card">
-                <img src="images/cake1.jpg" alt="Chocolate Truffle">
+                <img src="images/product1.jpg" alt="Fresh Produce">
                 <div class="card-body">
-                    <h3>Chocolate Truffle Cake</h3>
-                    <p class="price">₹650 / kg</p>
+                    <h3>Fresh Produce</h3>
+                    <p class="price">$2.99 / lb</p>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/cake2.jpg" alt="Red Velvet">
+                <img src="images/product2.jpg" alt="Artisan Bread">
                 <div class="card-body">
-                    <h3>Red Velvet Cake</h3>
-                    <p class="price">₹750 / kg</p>
+                    <h3>Artisan Bread</h3>
+                    <p class="price">$4.99 / loaf</p>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/cake3.jpg" alt="Black Forest">
+                <img src="images/product3.jpg" alt="Organic Juice">
                 <div class="card-body">
-                    <h3>Black Forest Cake</h3>
-                    <p class="price">₹600 / kg</p>
+                    <h3>Organic Juice</h3>
+                    <p class="price">$5.99 / bottle</p>
                 </div>
             </div>
-            <!-- Add 3–6 more cards -->
+            <div class="product-card">
+                <img src="images/product4.jpg" alt="Free-Range Eggs">
+                <div class="card-body">
+                    <h3>Free-Range Eggs</h3>
+                    <p class="price">$3.99 / dozen</p>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="images/product5.jpg" alt="Imported Cheese">
+                <div class="card-body">
+                    <h3>Imported Cheese</h3>
+                    <p class="price">$10.99 / lb</p>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="images/product6.jpg" alt="Gourmet Coffee">
+                <div class="card-body">
+                    <h3>Gourmet Coffee</h3>
+                    <p class="price">$12.99 / bag</p>
+                </div>
+            </div>
             </div>
          </div>
          </section>
 
     <footer>
-        <p>&copy; 2025 Delicious Bites Bakery | MG Road, Indiranagar, Bangalore | Call: +91 98765 43210</p>
+        <p>&copy; 2025 LeBroc Grocery | 123 Main Street, Anytown, USA | Call: (123) 456-7890</p>
     </footer>
 
     <script>
