--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delicious Bites Bakery | Fresh Cakes & Pastries</title>
+    <title>About LeBroc Grocery</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav class="container">
-            <div class="logo">Le<span>Brok</span></div>
+            <div class="logo">Le<span>Broc</span></div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -23,25 +23,25 @@
 
     <section style="padding:100px 0 80px;">
     <div class="container">
-        <h2>About Delicious Bites Bakery</h2>
+        <h2>About LeBroc Grocery</h2>
         <div style="display:grid; grid-template-columns:1fr 1fr; gap:3rem; align-items:center;">
             <div>
-                <img src="images/owner.jpg" alt="Owner Priya Sharma" style="width:100%; border-radius:15px;">
+                <img src="images/owner.jpg" alt="Owner of LeBroc Grocery" style="width:100%; border-radius:15px;">
             </div>
             <div>
                 <h3>Our Story</h3>
-                <p>Founded by Mrs. Priya Sharma in 2020, Delicious Bites started as a small home bakery and grew into Indiranagar's favorite bakery because of our passion for quality and taste.</p>
+                <p>Founded in 2020, LeBroc Grocery started as a small family-run store with a passion for providing the community with fresh, high-quality groceries.</p>
                 <br>
-                <p>We use only pure butter, fresh eggs, Belgian chocolate, and real vanilla – no preservatives, no shortcuts.</p>
+                <p>We believe in the importance of fresh food and supporting local farmers and producers. That's why we source our products with care.</p>
                 <br>
-                <p>Whether it's a birthday, wedding, or just your daily bread – we bake it with love.</p>
+                <p>Whether you're doing your weekly shopping or looking for a special ingredient, we're here to help.</p>
             </div>
         </div>
     </div>
 </section>
 
     <footer>
-        <p>&copy; 2025 Delicious Bites Bakery | MG Road, Indiranagar, Bangalore | Call: +91 98765 43210</p>
+        <p>&copy; 2025 LeBroc Grocery | 123 Main Street, Anytown, USA | Call: (123) 456-7890</p>
     </footer>
 
     <script>
