changed the menu tag

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <div class="menu-toggle" id="menuToggle">☰</div>
+            <div class="menu-toggle" id="menuToggle">=</div>
         </nav>
     </header>
 
