--- a/about.html
+++ b/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About LeBroc Grocery</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <nav class="container">
@@ -22,23 +24,26 @@
     </header>
 
     <section style="padding:100px 0 80px;">
-    <div class="container">
-        <h2>About LeBroc Grocery</h2>
-        <div style="display:grid; grid-template-columns:1fr 1fr; gap:3rem; align-items:center;">
-            <div>
-                <img src="images/owner.jpg" alt="Owner of LeBroc Grocery" style="width:100%; border-radius:15px;">
-            </div>
-            <div>
-                <h3>Our Story</h3>
-                <p>Founded in 2020, LeBroc Grocery started as a small family-run store with a passion for providing the community with fresh, high-quality groceries.</p>
-                <br>
-                <p>We believe in the importance of fresh food and supporting local farmers and producers. That's why we source our products with care.</p>
-                <br>
-                <p>Whether you're doing your weekly shopping or looking for a special ingredient, we're here to help.</p>
+        <div class="container">
+            <h2>About LeBroc Grocery</h2>
+            <div style="display:grid; grid-template-columns:1fr 1fr; gap:3rem; align-items:center;">
+                <div>
+                    <img src="images/owner.jpg" alt="Owner of LeBroc Grocery" style="width:100%; border-radius:15px;">
+                </div>
+                <div>
+                    <h3>Our Story</h3>
+                    <p>Founded in 2020, LeBroc Grocery started as a small family-run store with a passion for providing
+                        the community with fresh, high-quality groceries.</p>
+                    <br>
+                    <p>We believe in the importance of fresh food and supporting local farmers and producers. That's why
+                        we source our products with care.</p>
+                    <br>
+                    <p>Whether you're doing your weekly shopping or looking for a special ingredient, we're here to
+                        help.</p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <footer>
         <p>&copy; 2025 LeBroc Grocery | 123 Main Street, Anytown, USA | Call: (123) 456-7890</p>
@@ -53,4 +58,5 @@
         });
     </script>
 </body>
+
 </html>
