changed the contacts

--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,11 @@
                 <div>
                     <h3 style="color: #d35400; margin-bottom: 1rem;">Visit Our Store</h3>
                     <p><strong>Address:</strong><br>
-                    123 Main Street,<br>
-                    Anytown, USA 12345</p><br>
+                    LPU Phagwara,<br>
+                    Unimall</p><br>
 
                     <p><strong>Phone:</strong><br>
-                    (123) 456-7890</p><br>
+                    99150 73812</p><br>
 
                     <p><strong>Email:</strong><br>
                     hello@lebroc.com</p><br>
@@ -89,7 +89,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 LeBroc Grocery | 123 Main Street, Anytown, USA | Call: (123) 456-7890</p>
+        <p>© 2025 LeBroc Grocery | LPU Phagwara, Unimall | Call: 99150 73812</p>
     </footer>
 
     <!-- Mobile Menu Script + Form Submit Alert -->
