--- a/products.html
+++ b/products.html
@@ -76,7 +76,7 @@
          </section>
 
     <footer>
-        <p>&copy; 2025 LeBroc Grocery | 123 Main Street, Anytown, USA | Call: (123) 456-7890</p>
+        <p>© 2025 LeBroc Grocery | LPU Phagwara, Unimall | Call: 99150 73812</p>
     </footer>
 
     <script>
