--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,7 @@
     </section>
 
     <footer>
-        <p>© 2025 LeBroc Grocery | 123 Main Street, Anytown, USA | Call: (123) 456-7890</p>
+        <p>© 2025 LeBroc Grocery | LPU Phagwara, Unimall | Call: 99150 73812</p>
     </footer>
 
     <script>
