--- a/gallery.html
+++ b/gallery.html
@@ -32,11 +32,7 @@
                 <img src="images/gallery1.jpg" alt="Aisle with fresh produce">
                 <img src="images/gallery2.jpg" alt="Shelves stocked with goods">
                 <img src="images/gallery3.jpg" alt="Close-up of fresh bread">
-                <img src="images/gallery4.jpg" alt="A variety of cheeses">
-                <img src="images/gallery5.jpg" alt="The entrance to the store">
-                <img src="images/gallery6.jpg" alt="A friendly staff member">
-                <img src="images/gallery7.jpg" alt="A display of organic products">
-                <img src="images/gallery8.jpg" alt="Customers shopping in the store">
+                <img src="images/gallery4.jpg" alt="A variety of spices">
             </div>
         </div>
     </section>
