--- a/products.html
+++ b/products.html
@@ -33,42 +33,49 @@
                 <img src="images/product1.jpg" alt="Fresh Produce">
                 <div class="card-body">
                     <h3>Fresh Produce</h3>
-                    <p class="price">$2.99 / lb</p>
+                    <p class="price">₹249 / kg</p>
                 </div>
             </div>
             <div class="product-card">
                 <img src="images/product2.jpg" alt="Artisan Bread">
                 <div class="card-body">
                     <h3>Artisan Bread</h3>
-                    <p class="price">$4.99 / loaf</p>
+                    <p class="price">₹415 / loaf</p>
                 </div>
             </div>
             <div class="product-card">
                 <img src="images/product3.jpg" alt="Organic Juice">
                 <div class="card-body">
                     <h3>Organic Juice</h3>
-                    <p class="price">$5.99 / bottle</p>
+                    <p class="price">₹499 / bottle</p>
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/product4.jpg" alt="Free-Range Eggs">
+                <img src="images/product-veg.jpg" alt="Organic Vegetables">
                 <div class="card-body">
-                    <h3>Free-Range Eggs</h3>
-                    <p class="price">$3.99 / dozen</p>
+                    <h3>Organic Vegetables</h3>
+                    <p class="price">₹149 / kg</p>
                 </div>
             </div>
             <div class="product-card">
                 <img src="images/product5.jpg" alt="Imported Cheese">
                 <div class="card-body">
                     <h3>Imported Cheese</h3>
-                    <p class="price">$10.99 / lb</p>
+                    <p class="price">₹915 / kg</p>
                 </div>
             </div>
             <div class="product-card">
                 <img src="images/product6.jpg" alt="Gourmet Coffee">
                 <div class="card-body">
                     <h3>Gourmet Coffee</h3>
-                    <p class="price">$12.99 / bag</p>
+                    <p class="price">₹1079 / bag</p>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="images/product-toiletries.jpg" alt="Toiletries">
+                <div class="card-body">
+                    <h3>Toiletries</h3>
+                    <p class="price">Starting from ₹99</p>
                 </div>
             </div>
             </div>
